fix: show hidden testimonial card by removing overflow:hidden

--- a/src/css/testimonials.css
+++ b/src/css/testimonials.css
@@ -6,7 +6,6 @@
 }
 
 .testimonial-carousel {
-  overflow: hidden;
   width: 100%;
   margin: 0 auto;
   position: relative;
